swen430as2/tests/valid/null/Null_Valid_5.while
type Rec is {
  int x,
  null y
}

null f(Rec r) {
  return r.y;
}

void main() {
    assert f({x:1, y: null}) == null;
}