swen430as2/tests/invalid/unions/UnionType_Invalid_7-TC01.while
bool f(int|{bool f} msg) {
    return msg.f;
}
